sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.error
AlgSelectionSort:7: error: '<-' expected but '=' found.
for (i=0;i<lgr-1;i=i+1){
      ^AlgSelectionSort:7: error: illegal start of simple expression
for (i=0;i<lgr-1;i=i+1){
        ^AlgSelectionSort:7: error: '<-' expected but ';' found.
for (i=0;i<lgr-1;i=i+1){
                ^AlgSelectionSort:8: error: '<-' expected but '=' found.
	for(j=i;j<lgr;j=j+1){
             ^AlgSelectionSort:8: error: illegal start of simple expression
	for(j=i;j<lgr;j=j+1){
               ^AlgSelectionSort:8: error: '<-' expected but ';' found.
	for(j=i;j<lgr;j=j+1){
                     ^