sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.code
def selectionSort() {
var lgr: int = getNombreValeurs();
var jMin: int = 0;
var j: int;
var i: int;
for (i=0;i<lgr-1;i=i+1){
	for(j=i;j<lgr;j=j+1){
		if(plusPetit(j,jMin)){
			jMin=j;
		}
	}
	echange(i,jMin);
}

}
